tests/security/taintedInputFromReturnTypeToEcho/output.txt
ERROR: TaintedData - input.hack:12:14 - Data from a URL query string found its way to an HTML tag